--- a/src/_assets/style/style.css
+++ b/src/_assets/style/style.css
@@ -6596,3 +6596,47 @@ p.no-data-summary-text {
   height: 200px;
 
 }
+.swiper.swiper-initialized.swiper-horizontal.main-swiper.swiper-backface-hidden img{
+  height: 510px;
+  width: 100%;
+  object-fit: cover;
+}
+.lightbox-media-gallery-card img{
+  height: 510px;
+  width: 100%;
+  object-fit: cover;
+}
+.thumbnail-swiper .swiper-wrapper img{
+  height: 100px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.swiper-slide-thumb-active{
+  border: 2px solid #108DE5;
+  border-radius: 5px;
+}
+.swiper-slide.lightbox-media-gallery-card{
+  padding: 0;
+  margin-top: 15px;
+}
+.back-link {
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+  color: #FFFFFF;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  max-width: fit-content;
+  margin-bottom: 10px;
+}
+.back-link:hover{
+  color: #108DE5;
+}
+.back-link:hover .back-svg path{
+  fill: #108DE5 !important;
+}
